fix: move text block to respect the spacings

--- a/src/components/Home/Intro/styles.module.css
+++ b/src/components/Home/Intro/styles.module.css
@@ -17,10 +17,11 @@
 
 .content {
   padding: 40px 16px;
+  flex-direction: column;
 }
 
 .wrapper {
-  align-self: flex-start;
+  align-items: flex-start;
   min-width: 100%;
   height: 720px;
   display: flex;
@@ -137,7 +138,10 @@
 
   .wrapper {
     height: 800px;
-    align-items: center;
+  }
+
+  .content {
+    padding: 100px 105px;
   }
 }
 
